--- a/DBC/index.html
+++ b/DBC/index.html
@@ -191,7 +191,7 @@
             </div>
           </div>
           <div class="d-flex justify-content-center p-3 bg-navbar">
-            <div class="contact-text">Copyright @ DBC boxing academy | 2021</div>
+            <div class="contact-text">Copyright @ DBC boxing club| 2021</div>
           </div>
     </div>
 </body>
